--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -2,9 +2,10 @@
 @use 'partials/based';
 // @use 'partials/variables';
 @use 'partials/header';
+@use 'partials/footer';
 @use 'partials/productTile';
 
 @use 'pages/welcome';
-@use 'pages/listing';
 @use 'pages/productPage';
+@use 'pages/listing';
 @use 'pages/cart';
