--- a/src/scss/partials/_based.scss
+++ b/src/scss/partials/_based.scss
@@ -5,10 +5,14 @@ html,
 body {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
+  // box-sizing: border-box;
   background-color: v.$bg_color;
   font-family: 'mainFont';
   font-size: v.$font-size;
+}
+body * {
+  box-sizing: border-box;
+
 }
 main {
   min-height: calc(100vh - v.$header_height);
@@ -16,26 +20,25 @@ main {
   flex-direction: column;
 }
 
+.product_page .action {
+  display: none;
+} 
 
+.back {
+  appearance: none;
+  background-color: transparent;
+  border-radius: 4px;
+  border: none;
+  border-bottom: 1px solid #000;
+  padding: 5px 20px;font-size: 16px;
+}
 
 a {
   text-decoration: none;
   color: v.$text_color;
 }
 
-.new_price {
-  color: v.$promo_color;
-  font-size: clamp(18px, 20px, 22px);
-  & ~ .old_price {
-      opacity: .5;
-      text-decoration: line-through;
-      font-size: clamp(14px, 16px, 18px);
-  }
-}
-.old_price {
-  font-size: clamp(18px, 20px, 22px);
 
-}
 
 .single_order {
   .details {
@@ -43,9 +46,10 @@ a {
   }
 }
 
-
-
-
+h2, h1 {
+  margin: 0;
+  padding: 0;
+}
 // .cls_content {
 //   position: relative;
 //   object-fit: cover;
