--- a/src/scss/partials/_productTile.scss
+++ b/src/scss/partials/_productTile.scss
@@ -1,49 +1,67 @@
 @use 'variables' as *;
 .listing {
-    .product_tile {
-        // border: 1px solid $header_color;
-        background-color: $header_color;
-        // max-width: clamp(25vw, 40vw, 40vw);
-        @include shadow;
-        .tile {
-            display: flex;
-            flex-direction: column;
-            .image {
-                flex: 1 1 50%;
-                margin: 0 auto;
-                img {
-                    width: 100%;
-                }
-                
-            }
-            .description {
-                padding: 5px;
-                flex: 1 1 50%;
-                background-color: $details_color;
-                    border-radius: 10px 10px 0 0;
-                    min-height: 50px;
-                .title {
-                    font-size: $font-size;
-                    text-align: center;
-                    font-weight: 800;
-                }
-                .price_container {
-                    
-                    display: flex;
-                    justify-content: space-around;
-                    align-items: center;
-                    .new_price {
-                        color: $promo_color;
-                        font-size: clamp(18px, 20px, 22px);
-                        & ~ .old_price {
-                            opacity: .5;
-                            text-decoration: line-through;
-                            font-size: clamp(14px, 16px, 18px);
-                        }
-                    }
-                    
-                }
+  .product_tile {
+    background-color: $header_color;
+    height: 100%;
+    .tile {
+      height: 100%;
+      display: flex;
+      flex-direction: column;
+      .action {
+        display: flex;
+        justify-content: space-between;
+        padding: 12px 10px 0 10px;
+      }
+      .image {
+        flex: 1 1 50%;
+        margin: 0 auto;
+        img {
+          width: 100%;
+        }
+      }
+      .description {
+        padding: 19px 5px;
+        flex: 1 1 50%;
+        background-color: $details_color;
+        border-radius: 10px 10px 0 0;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        gap: 10px;
+        .title {
+          text-align: center;
+          font-weight: 800;
+          color: #000;
+          text-align: center;
+          font-family: Cabinet Grotesk;
+          font-size: 20px;
+          font-style: normal;
+          font-weight: 400;
+          line-height: 19px; 
+        }
+        .price_container {
+          display: grid;
+          grid-template-columns: 1fr 1fr;
+          .new_price {
+            color: $promo_color;
+            color: #000;
+            text-align: center;
+            font-family: Cabinet Grotesk;
+            font-size: 20px;
+            font-style: normal;
+            font-weight: 400;
+            & ~ .old_price {
+                text-decoration: line-through;
             }
         }
+        .old_price {
+         text-align: center;
+         font-size: 20px;
+         font-style: normal;
+         font-weight: 400;
+       }
+        }
+      }
     }
+  }
 }
