--- a/src/scss/partials/_variables.scss
+++ b/src/scss/partials/_variables.scss
@@ -4,17 +4,20 @@
   @return $vw;
 }
 
-$desktop_breakpoint: 800px;
+$lg_breakpoint: 800px;
+$md_breakpoint: 600px;
+$xs_breakpoint: 350px;
 
 $bg_color: #f0c9ba;
 $header_color: #fff;
-$details_color: #ca8f7a;
-$promo_color: #9e3737;
+$details_color: #CA8F7A;
+$promo_color: #000;
+$cta_color: #965858;
 $text_color: #000;
 
 $font-size: clamp(14px, 18px, 20px);
 
-$header_height: 90px;
+$header_height: 52px;
 
 $footer_height: 134px;
 $d_footer_height: 50px;
@@ -22,7 +25,7 @@ $footer_color: #f9bc60;
 
 $menu_color: #e8e4e6;
 
-$header_padding: 30px;
+$header_padding: 32px;
 
 $open_menu_width: 293px;
 
@@ -41,14 +44,15 @@ $open_menu_width: 293px;
   .buy {
     appearance: none;
     border: none;
-    background-color: $promo_color;
-    padding: 10px 20px;
-    border-radius: 10px;
+    background-color: $cta_color;
+    padding: 5px vw(408, 50);
+    border-radius: 4px;
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 10px;
     color: #fff;
+    font-size: 16px;
 }
 }
 
