--- a/src/scss/pages/_listing.scss
+++ b/src/scss/pages/_listing.scss
@@ -1,7 +1,7 @@
 @use '../partials/variables' as *;
 
 .listing {
-  padding: 20px 20px 70px 20px;
+//   padding: 20px 20px 70px 20px;
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 20px;
