--- a/src/scss/partials/_based.scss
+++ b/src/scss/partials/_based.scss
@@ -5,14 +5,13 @@ html,
 body {
   margin: 0;
   padding: 0;
-  // box-sizing: border-box;
+  box-sizing: border-box;
   background-color: v.$bg_color;
   font-family: 'mainFont';
   font-size: v.$font-size;
 }
 body * {
   box-sizing: border-box;
-
 }
 main {
   min-height: calc(100vh - v.$header_height);
@@ -20,9 +19,22 @@ main {
   flex-direction: column;
 }
 
+section {
+  padding: 20px 20px 70px 20px;
+}
+
 .product_page .action {
   display: none;
-} 
+}
+.empty {
+  height: calc(100vh - (52px * 2));
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
 
 .back {
   appearance: none;
@@ -30,7 +42,8 @@ main {
   border-radius: 4px;
   border: none;
   border-bottom: 1px solid #000;
-  padding: 5px 20px;font-size: 16px;
+  padding: 5px 20px;
+  font-size: 16px;
 }
 
 a {
@@ -38,15 +51,14 @@ a {
   color: v.$text_color;
 }
 
-
-
 .single_order {
   .details {
     display: none;
   }
 }
 
-h2, h1 {
+h2,
+h1 {
   margin: 0;
   padding: 0;
 }
