--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,9 +1,9 @@
-
 @use 'partials/based';
 // @use 'partials/variables';
 @use 'partials/header';
 @use 'partials/footer';
 @use 'partials/productTile';
+@use 'partials/accordion';
 
 @use 'pages/welcome';
 @use 'pages/productPage';
