--- a/src/scss/pages/_cart.scss
+++ b/src/scss/pages/_cart.scss
@@ -6,6 +6,7 @@
   height: 100%;
   overflow: hidden;
   height: calc(100vh - $header_height - 244px);
+
   section.orders {
     // height: calc(100vh - 244px);
     overflow: scroll;
@@ -25,7 +26,6 @@
         justify-content: space-between;
 
         .image {
-
           picture {
             margin: 0 auto;
           }
@@ -101,7 +101,7 @@
     background-color: $header_color;
     // border-radius: 10px;
     padding: 20px 10px calc($header_height + 30px);
-    
+
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -151,7 +151,6 @@
         width: 100%;
         // padding: 5px 25px;
         @include btn;
-      
       }
       .back {
         min-width: 100px;
@@ -159,5 +158,29 @@
       }
     }
   }
-  
+  @media (min-width: $md_breakpoint) {
+    flex-direction: row;
+    flex: 1 1 50%;
+    .summary {
+      padding-top: 82px;
+      left: 50%;
+      top: 0;
+      height: 100%;
+      justify-content: flex-end;
+      flex-wrap: wrap;
+      align-content: flex-end;
+      gap: 25px;
+      h2 {
+        align-self: flex-start;
+        margin: 0;
+        font-size: 38px;
+      }
+      .discount * {
+        font-size: 26px;
+      }
+      .total * {
+        font-size: 30px;
+      }
+    }
+  }
 }
