--- a/src/scss/pages/_productPage.scss
+++ b/src/scss/pages/_productPage.scss
@@ -2,38 +2,41 @@
 
 .product_page {
   height: 100%;
-  flex-grow: 1;
-  display: flex;
-  flex-direction: column;
+  // flex-grow: 1;
+  // display: flex;
+  // flex-direction: column;
   .product_tile {
-    flex-grow: 1;
+    // flex-grow: 1;
     height: 100%;
-    display: flex;
-    flex-direction: column;
+    // display: flex;
+    // flex-direction: column;
   }
   .tile {
-    flex-grow: 1;
+    // flex-grow: 1;
     height: 100%;
-    width: 100vw;
-    display: flex;
-    flex-direction: column;
-    @media screen and (min-width: $lg_breakpoint) {
-      flex-direction: row;
+    // width: 100vw;
+    // display: flex;
+    // flex-direction: column;
+    background-color: $bg_color;
+
+    .action {
+      display: none;
     }
     .image {
       margin: 0 auto;
-      flex: 1 1 50%;
-      display: flex;
+      flex: 1 1 40%;
+      min-height: 100px;
+      // display: flex;
       picture {
-        display: flex;
+        // display: flex;
       }
       img {
-        width: 40vw;
+        height: 100%;
         align-self: center;
       }
     }
     .description {
-      flex: 1 1 50%;
+      flex: 1 1 60%;
       background-color: $header_color;
       height: 100%;
       padding: 0 20px;
@@ -84,7 +87,7 @@
           // line-height: 150%; /* 51px */
           & ~ .old_price {
             text-decoration: line-through;
-        }
+          }
         }
         .old_price {
           // color: #000;
@@ -94,7 +97,28 @@
           font-weight: 400;
           // line-height: 150%; /* 37.5px */
           // text-decoration-line: strikethrough;
-          
+        }
+      }
+    }
+    @media (min-width: $lg_breakpoint) {
+      flex-direction: row;
+      .image {
+        flex: 1 1 50%;
+        display: flex;
+        justify-content: center;
+        // align-items: center;
+        img {
+          height: auto;
+          width: 80%;
+          max-width: 400px;
+        }
+      }
+      .description {
+        flex: 1 1 50%;
+        justify-content: space-evenly;
+        padding-bottom: $header_height;
+        .price_container {
+          justify-content: space-between;
         }
       }
     }
@@ -114,5 +138,9 @@
   min-height: 50px;
   .buy {
     @include btn;
+  }
+  @media (min-width: $lg_breakpoint) {
+    left: 50%;
+    min-height: 70px;
   }
 }
