--- a/src/scss/partials/_based.scss
+++ b/src/scss/partials/_based.scss
@@ -12,11 +12,15 @@ body {
 }
 body * {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  // height: 100%
 }
 main {
-  min-height: calc(100vh - v.$header_height);
-  display: flex;
-  flex-direction: column;
+  height: calc(100vh - (v.$header_height * 2));
+  // height: 100%;
+  // display: flex;
+  // flex-direction: column;
 }
 
 section {
@@ -58,9 +62,11 @@ a {
 }
 
 h2,
-h1 {
-  margin: 0;
-  padding: 0;
+h1,
+p,
+span,
+div {
+  font-family: 'mainFont';
 }
 // .cls_content {
 //   position: relative;
