--- a/src/scss/partials/_productTile.scss
+++ b/src/scss/partials/_productTile.scss
@@ -1,8 +1,9 @@
 @use 'variables' as *;
-.listing {
+// .listing {
   .product_tile {
     background-color: $header_color;
     height: 100%;
+    min-height: 240px;
     .tile {
       height: 100%;
       display: flex;
@@ -61,7 +62,8 @@
          font-weight: 400;
        }
         }
+        @media (min-width: $md_breakpoint){}
       }
     }
   }
-}
+// }
