--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -15,12 +15,12 @@ body {
 
 body * {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 main {
-  min-height: calc(100vh - 52px);
-  display: flex;
-  flex-direction: column;
+  height: calc(100vh - 104px);
 }
 
 section {
@@ -61,9 +61,11 @@ a {
 }
 
 h2,
-h1 {
-  margin: 0;
-  padding: 0;
+h1,
+p,
+span,
+div {
+  font-family: "mainFont";
 }
 
 .header {
@@ -128,28 +130,29 @@ footer nav ul .router-link-active img {
   filter: invert(100%);
 }
 
-.listing .product_tile {
+.product_tile {
   background-color: #fff;
   height: 100%;
+  min-height: 240px;
 }
-.listing .product_tile .tile {
+.product_tile .tile {
   height: 100%;
   display: flex;
   flex-direction: column;
 }
-.listing .product_tile .tile .action {
+.product_tile .tile .action {
   display: flex;
   justify-content: space-between;
   padding: 12px 10px 0 10px;
 }
-.listing .product_tile .tile .image {
+.product_tile .tile .image {
   flex: 1 1 50%;
   margin: 0 auto;
 }
-.listing .product_tile .tile .image img {
+.product_tile .tile .image img {
   width: 100%;
 }
-.listing .product_tile .tile .description {
+.product_tile .tile .description {
   padding: 19px 5px;
   flex: 1 1 50%;
   background-color: #CA8F7A;
@@ -159,7 +162,7 @@ footer nav ul .router-link-active img {
   justify-content: space-between;
   gap: 10px;
 }
-.listing .product_tile .tile .description .title {
+.product_tile .tile .description .title {
   text-align: center;
   font-weight: 800;
   color: #000;
@@ -170,11 +173,11 @@ footer nav ul .router-link-active img {
   font-weight: 400;
   line-height: 19px;
 }
-.listing .product_tile .tile .description .price_container {
+.product_tile .tile .description .price_container {
   display: grid;
   grid-template-columns: 1fr 1fr;
 }
-.listing .product_tile .tile .description .price_container .new_price {
+.product_tile .tile .description .price_container .new_price {
   color: #000;
   color: #000;
   text-align: center;
@@ -183,16 +186,15 @@ footer nav ul .router-link-active img {
   font-style: normal;
   font-weight: 400;
 }
-.listing .product_tile .tile .description .price_container .new_price ~ .old_price {
+.product_tile .tile .description .price_container .new_price ~ .old_price {
   text-decoration: line-through;
 }
-.listing .product_tile .tile .description .price_container .old_price {
+.product_tile .tile .description .price_container .old_price {
   text-align: center;
   font-size: 20px;
   font-style: normal;
   font-weight: 400;
 }
-
 .single_transaction {
   background: rgba(172, 115, 73, 0.23);
   margin: 10px 0;
@@ -213,9 +215,10 @@ footer nav ul .router-link-active img {
 .single_transaction.open_qr {
   max-height: 2000px;
 }
-.single_transaction.open_qr figure {
+.single_transaction.open_qr figure.qrcode {
   text-align: center;
-  margin: 20px 0;
+  margin: 20px auto;
+  width: 334px;
 }
 .single_transaction.open_qr p {
   display: none;
@@ -670,42 +673,28 @@ footer nav ul .router-link-active img {
 
 .product_page {
   height: 100%;
-  flex-grow: 1;
-  display: flex;
-  flex-direction: column;
 }
 .product_page .product_tile {
-  flex-grow: 1;
   height: 100%;
-  display: flex;
-  flex-direction: column;
 }
 .product_page .tile {
-  flex-grow: 1;
   height: 100%;
-  width: 100vw;
-  display: flex;
-  flex-direction: column;
+  background-color: #f0c9ba;
 }
-@media screen and (min-width: 800px) {
-  .product_page .tile {
-    flex-direction: row;
-  }
+.product_page .tile .action {
+  display: none;
 }
 .product_page .tile .image {
   margin: 0 auto;
-  flex: 1 1 50%;
-  display: flex;
-}
-.product_page .tile .image picture {
-  display: flex;
+  flex: 1 1 40%;
+  min-height: 100px;
 }
 .product_page .tile .image img {
-  width: 40vw;
+  height: 100%;
   align-self: center;
 }
 .product_page .tile .description {
-  flex: 1 1 50%;
+  flex: 1 1 60%;
   background-color: #fff;
   height: 100%;
   padding: 0 20px;
@@ -758,6 +747,29 @@ footer nav ul .router-link-active img {
   font-style: normal;
   font-weight: 400;
 }
+@media (min-width: 800px) {
+  .product_page .tile {
+    flex-direction: row;
+  }
+  .product_page .tile .image {
+    flex: 1 1 50%;
+    display: flex;
+    justify-content: center;
+  }
+  .product_page .tile .image img {
+    height: auto;
+    width: 80%;
+    max-width: 400px;
+  }
+  .product_page .tile .description {
+    flex: 1 1 50%;
+    justify-content: space-evenly;
+    padding-bottom: 52px;
+  }
+  .product_page .tile .description .price_container {
+    justify-content: space-between;
+  }
+}
 
 .add_to_cart {
   position: absolute;
@@ -784,6 +796,12 @@ footer nav ul .router-link-active img {
   color: #fff;
   font-size: 16px;
   height: 34px;
+}
+@media (min-width: 800px) {
+  .add_to_cart {
+    left: 50%;
+    min-height: 70px;
+  }
 }
 
 .listing {
@@ -962,6 +980,33 @@ footer nav ul .router-link-active img {
 .cart_page .summary .sum .back {
   min-width: 100px;
   text-align: center;
+}
+@media (min-width: 600px) {
+  .cart_page {
+    flex-direction: row;
+    flex: 1 1 50%;
+  }
+  .cart_page .summary {
+    padding-top: 82px;
+    left: 50%;
+    top: 0;
+    height: 100%;
+    justify-content: flex-end;
+    flex-wrap: wrap;
+    align-content: flex-end;
+    gap: 25px;
+  }
+  .cart_page .summary h2 {
+    align-self: flex-start;
+    margin: 0;
+    font-size: 38px;
+  }
+  .cart_page .summary .discount * {
+    font-size: 26px;
+  }
+  .cart_page .summary .total * {
+    font-size: 30px;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
