--- a/src/scss/partials/_based.scss
+++ b/src/scss/partials/_based.scss
@@ -61,12 +61,14 @@ a {
   }
 }
 
-h2,
 h1,
+h2,
+h3,
 p,
 span,
 div {
   font-family: 'mainFont';
+  font-weight: normal;
 }
 // .cls_content {
 //   position: relative;
