--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -1,6 +1,7 @@
 @font-face {
   font-family: "mainFont";
-  src: url("https://cdn.statically.io/gh/GabrielaGodek/Fonts/main/CabinetGrotesk_Complete/Fonts/OTF/CabinetGrotesk-Regular.otf");
+  src: url("https://cdn.statically.io/gh/GabrielaGodek/Fonts/main/Montserrat/static/Montserrat-Light.ttf") format("TrueType");
+  font-display: swap;
 }
 html,
 #app,
