--- a/src/scss/pages/_listing.scss
+++ b/src/scss/pages/_listing.scss
@@ -1,20 +1,36 @@
 @use '../partials/variables' as *;
 
 .listing {
-//   padding: 20px 20px 70px 20px;
+  //   padding: 20px 20px 70px 20px;
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 20px;
+  h1 {
+    grid-column: span 2;
+    margin-bottom: 20px;
+  }
   @media (max-width: $xs_breakpoint) {
-      grid-template-columns: 1fr;
+    grid-template-columns: 1fr;
+    h1 {
+      grid-column: span 1;
+    }
   }
   @media (min-width: $md_breakpoint) {
-      grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
+    h1 {
+      grid-column: span 3;
+    }
   }
   @media (min-width: $lg_breakpoint) {
-      grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    h1 {
+      grid-column: span 4;
+    }
   }
   @media (min-width: 1280px) {
-      grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+    h1 {
+      grid-column: span 6;
+    }
   }
 }
